# 0.4.5
- FIX: Fixed overwriting sample text dropdown texts not getting displayed correctly in the front end
- FIX: Various minor code improvements to avoid PHP notices and warnings

# 0.4.4
- FIX: Made 'init' and 'fina' Opentype Features available in the context menu for fonts that support them

# 0.4.3
- TWEAK: Improved admin interface slider responsivness and sanity checks
- TWEAK: Fixed compability with misc plugins (css class conflicts)

# 0.4.1 & 0.4.2
- TWEAK: Hotfix to suppress a debug message

# 0.4.0
- FEATURE: Implemented option for handling notdef glyphs
- FEATURE: Implemented language locale picker, which allows previewing Opentype locl substitutions
- FEATURE: Implemented default translations for frontend strings
- FEATURE: Included translations: English, German, Finnish, Persian
- FEATURE: Added more Javascript events for various UI operations, making it easier to customise and extend the plugin
- FEATURE: Added 'fontsampler_enqueue_styles' filter hook to programatically trigger enqueuing the fontsampler styles (e.g. if you have programatically triggered the shortcode and want to ensure the styles are loaded in the head tag)
- FEATURE: Implemented automatic detection and rewrite for mixed content problems when serving a site over https, but font files are stored in the media gallery with http
- TWEAK: The Fontsampler UI CSS and HTML structure has changed slightly (mainly: using flex-box display)
- TWEAK: Improved shortcode detection and outputting of fontsampler styles to the header of pages on which the fontsampler shortcode is detected 
- TWEAK: Improved rendering for right-to-left languages in frontend and backend
- TWEAK: Fixed the warning about the minimum PHP version required for Fontsampler to be 5.6.33
- TWEAK: Warning and error messages now use the default Wordpress styling
- FIX: Fixed an issue where settings overwrites for the sample texts dropdown would incorrectly render the default settings' sample texts